# python-lab

./: AGENTS.md  CHANGELOG.md  README.md  conftest.py  flake.nix  pyproject.toml  pytest.ini
src/abstract/: abstract.py
src/case/: case.py
src/decorator/: decoratoring.py
src/dict/: dict.py
src/dispatch/: singledispatch.py
src/float/: ieee_fp.py
src/intEnum/: intEnum.py
src/quartus/: version_test.py
test/: conftest.py  test_abstract.py  test_args_and_kwargs.py  test_bytearray.py  test_bytes.py  test_case.py  test_class_dunders.py  test_class_inheritance.py  test_cocotb_event.py  test_conftest.py  test_construct.py  test_decorator.py  test_hashlib.py  test_in_dataclass.py  test_intEnum.py  test_itertools_product.py  test_kwargs.py  test_quartus.py  test_single_dispatch.py
tests/: test_dict.py  test_intEnum.py  test_quartus.py
