[project]
name = "python-lab"
version = "0.1.0"
description = "Test various Python functions and use-cases"
authors = [
    {name = "Sindre Bergsvik Øvstegård",email = "sbo@eidel.no"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pytest-html (>=4.1.1,<5.0.0)",
    "construct (>=2.10.70,<3.0.0)"
]

[tool.poetry]
packages = [
    {include = "quartus", from = "src"},
    {include = "case", from = "src"},
    {include = "intEnum", from = "src"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
