[build-system]
requires = ["setuptools >= 80.9.0", "wheel", "uv"]
build-backend = "setuptools.build_meta"

[project]
name = "python-lab"
version = "0.1.0"
description = "Test various Python functions and use-cases"
authors = [{ name = "sibeov", email = "sbo@eidel.no" }]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
]
dependencies = [
  # VCS
  "commitizen (>= 4.13.5, <5.0.0)",
	# Scientific
	"numpy (>=2.3.4, <3.0.0)",
	"scipy (>=1.16.2, <2.0.0)",
	"ipython",
	# Plotting
	"matplotlib (>=3.10.7, <4.0.0)",
	"bokeh (>=3.8.0, <4.0.0)",
	"pygobject(>=3.54.3, <4.0.0)",
	# Testing
	"pytest (>=8.4.2,<9.0.0)",
	"pytest-asyncio (>=0.26.0,<0.27.0)",
	"pytest-html (>=4.1.1,<5.0.0)",
	"construct (>=2.10.70,<3.0.0)",
	# FPGA
	"cocotb (>=2.0.0, <3.0.0)",
	"pyuvm (>=4.0.1, <5.0.0)",
]

[tool.black]
line-length = 130
target-version = ["py313"]
skip-string-normalization = false

[tool.pyright]
typeCheckingMode = "off"
reportMissingImports = false
reportMissingTypeStubs = false
reportUnusedVariable = true
exclude = ["build", "dist"]
include = ["pyuvm", "src"]

[tool.mypy]
ignore_missing_imports = true
ignore_errors = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v${version}"
version_scheme = "semver2"
version = "0.1.0"
update_changelog_on_bump = true
